classDiagram
    class Hospital {
        -String codHospital
        -String nombre
        -String ciudad
        -String telefono
        +getMedico() Medico
    }

    class Servicio {
        -String idServicio
        -String nombreCompleto
        -String comentario
        -int numeroCamas
    }

    class Medico {
        -String DNI
        -String apellidosNombre
        -Date fechaNacimiento
        -boolean esDirector
    }

    class HistoriaClinica {
        -String codHist
        -String DNIPaciente
        -String apellidosNombrePaciente
        -Date fechaNacimientoPaciente
        -String numeroSeguridadSocial
    }

    class Visita {
        -Date fechaHora
        -String diagnostico
        -String tratamiento
        -String numeroHabitacion
        -Date fechaSalida
    }

    Hospital "1" *-- "1..*" Servicio
    Hospital "1" *-- "1..*" Medico
    Medico "1..*" -- "1..*" Servicio
    HistoriaClinica "1" -- "1..*" Visita
    Visita "1" -- "1" Hospital
    Visita "1" -- "1" Servicio
    Visita "1" -- "1" Medico
